--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/content": "^2.13.4",
     "@nuxtjs/tailwindcss": "6.12.2",
     "nuxt": "^3.15.0",
     "vue": "latest",
